# apps/admin/src/api/index.ts
@@ -7,6 +7,7 @@ export {
   adminLinksControllerArchive,
   adminLinksControllerBatch,
   adminLinksControllerBatchArchive,
+  adminLinksControllerCreate,
   adminLinksControllerFindOne,
   adminLinksControllerList,
   adminLinksControllerOverview,
@@ -57,6 +58,11 @@ export type {
   AdminLinksControllerBatchErrors,
   AdminLinksControllerBatchResponse,
   AdminLinksControllerBatchResponses,
+  AdminLinksControllerCreateData,
+  AdminLinksControllerCreateError,
+  AdminLinksControllerCreateErrors,
+  AdminLinksControllerCreateResponse,
+  AdminLinksControllerCreateResponses,
   AdminLinksControllerFindOneData,
   AdminLinksControllerFindOneError,
   AdminLinksControllerFindOneErrors,
@@ -167,6 +173,7 @@ export type {
   BatchUpdateLinksDto,
   BatchUpdateLinksResponseDto,
   ClientOptions,
+  CreateLinkDto,
   CreateSyncJobDto,
   LatestSyncSummaryResponseDto,
   LinkResponseDto,
